# tauri-femtovg

./: README.md  index.html  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/tauri-plugin-tauri-femtovg/: Cargo.toml  README.md  package.json
src-tauri/tauri-plugin-tauri-femtovg/android/: build.gradle.kts
src-tauri/tauri-plugin-tauri-femtovg/android/src/androidTest/java/com/plugin/tauri_femtovg/: ExampleInstrumentedTest.kt
src-tauri/tauri-plugin-tauri-femtovg/android/src/main/java/com/plugin/tauri_femtovg/: Example.kt  ExamplePlugin.kt
src-tauri/tauri-plugin-tauri-femtovg/android/src/test/java/com/plugin/tauri_femtovg/: ExampleUnitTest.kt
src-tauri/tauri-plugin-tauri-femtovg/guest-js/: index.ts
src-tauri/tauri-plugin-tauri-femtovg/permissions/autogenerated/: reference.md
src-tauri/tauri-plugin-tauri-femtovg/src/: commands.rs  desktop.rs  lib.rs  mobile.rs
