[package]
name = "tauri-femtovg"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_femtovg_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-tauri-femtovg = { path = "./tauri-plugin-tauri-femtovg" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = "28.0.0"
femtovg = { version = "0.21", features = ["wgpu"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"
libloading = "0.9"
glib = "0.18"
async-channel = "2.5.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk = "0.8"
raw-window-handle = "0.6"
ndk-context = "0.1"
